bk_ida/gccida/g1/output_pic_addr_const
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5810:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v11.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5812:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5415, "output_pic_addr_const"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5813:38: error: expected expression
output_pic_addr_const( file, *( rtx *)( v11.rtwint + 8), code); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5814:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( int)x[1]; 
            ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5821:19: error: use of undeclared identifier 'stru_665A39'
fwrite( ( char *)&stru_665A39._IO_buf_base + 6, 1uLL, 0xFuLL, file); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5838:41: error: use of undeclared identifier 'stru_665A39'
output_operand_lossage( ( const char *)&stru_665A39._IO_save_base + 6); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5850:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)x[1].fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5852:32: error: use of undeclared identifier 'stru_665A39'
fprintf( file, ( const char *)&stru_665A39._IO_write_end + 3, v6.rtwint, *( _QWORD *)&x[1]); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5862:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5343, "output_pic_addr_const"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5875:19: error: use of undeclared identifier 'stru_665A39'
fwrite( ( char *)&stru_665A39._IO_write_ptr + 6, 1uLL, 4uLL, file); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5883:38: error: expected expression
output_pic_addr_const( file, *( rtx *)&rtx[1], code); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5887:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = (  struct rtx_def *)rtx[1]; 
                         ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5889:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 5402, "output_pic_addr_const"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/i386.c:5902:38: error: expected expression
output_pic_addr_const( file, *( rtx *)&x[1], code); 
                                     ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_pic_addr_const/src/obj/i386.o] Error 1
